--- a/index.html
+++ b/index.html
@@ -1,213 +1,164 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sobre mi !</title>
-  <link rel="icon" type="image/jpg" href="./img/fantasma.png" />
-  <!-- Enlace del CDN de bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portafolio - Dante Medina</title>
+  <!-- Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Asimovian&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Story+Script&family=TASA+Orbiter:wght@400..800&display=swap"
-    rel="stylesheet">
 </head>
 
 <body>
-  <!-- Barra de navegación -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav-bar-css">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="./img/hogar.svg" alt="home icon" width="30" height="24">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg py-3">
+    <div class="container">
+      <!-- <img src="world-of-warcraft-horde-pvp-logo-png_seeklogo-153902.png" alt="Logo" class="navbar-brand"> -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page"
-              href="https://www.youtube.com/watch?v=MvzxM7nzGbM&list=RDMvzxM7nzGbM&start_radio=1">Inicio</a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto align-items-center">
+          <li class="nav-item"><a class="nav-link" href="#about">Sobre mí</a></li>
+          <li class="nav-item"><a class="nav-link" href="#skills">Habilidades</a></li>
+          <li class="nav-item"><a class="nav-link" href="#experience">Experiencia</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Proyectos</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contacto</a></li>
+          <!-- Switch modo oscuro -->
+          <li class="nav-item ms-3">
+            <div class="form-check form-switch">
+              <input class="form-check-input" type="checkbox" id="darkModeSwitch">
+              <label class="form-check-label" for="darkModeSwitch">☀️</label>
+            </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://getbootstrap.com/docs/5.3/components/navbar/">Sobre mi</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="https://www.youtube.com/" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Experiencia
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item"
-                  href="https://drive.google.com/file/d/1HjNAxKWoJyF4rX6W2E4a1fQtDYHm_ccw/view?usp=sharing">TCS</a></li>
-              <li><a class="dropdown-item"
-                  href="https://www.linkedin.com/in/dantez-medina/edit/forms/position/1779860321/?profileFormEntryPoint=PROFILE_SECTION">Servicio
-                  Social</a></li>
-
-              <li><a class="dropdown-item" href="#">Practicas profesionales</a></li>
-            </ul>
-          </li>
-
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" />
-          <button class="btn btn-outline-success" id="button-buscar" type="submit">Buscar</button>
-        </form>
       </div>
     </div>
   </nav>
 
-  <main class="container">
-    <!-- Fila 1 - Sección principal -->
-    <div class="row align-items-center my-4">
-      <div class="col-md-6 text-center">
-        <!-- Columna 1 -->
-        <h1 class="display-4 fw-bold"> Soy <span id="main-name">Dante Medina</span></h1>
-        <!-- lead my-3 utilidad de espacio, significa que el margin se aplicará al eje y (vertical), arriba y abajo -->
-        <!-- <p class="lead my-3"> QA Manual evolucionando a Desarrollador Full Stack</p> -->
-        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
-          aria-expanded="false" aria-controls="collapseWidthExample" id="button-descubrir">
-          Descubreme !
-        </button>
-        <div style="min-height: 120px">
-          <div class="collapse collapse-horizontal" id="collapseWidthExample">
-            <div class="card card-body mt-2 mx-auto" style="width: fit-content;">
-              QA Manual evolucionando a Desarrollador Full Stack
-            </div>
+  <!-- Hero -->
+  <section class="hero">
+    <div class="container">
+      <h1>Hola, soy <span class="text-primary">Dante Medina</span></h1>
+      <p>Desarrollador Jr. Fullstack especializado en Java y QA. Apasionado por crear aplicaciones eficientes y
+        escalables, con mentalidad de crecimiento continuo.</p>
+      <a href="#projects" class="btn btn-primary mt-3">Ver mis proyectos</a>
+    </div>
+  </section>
+
+    <!-- Proyectos -->
+  <section id="projects" class="container py-5">
+    <h2 class="fw-bold mb-4">Proyectos</h2>
+    <div class="row g-4">
+      <!-- Proyecto 1 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="https://via.placeholder.com/600x400" class="card-img-top" alt="Proyecto 1">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Tu localito</h5>
+            <p class="card-text">Creación de proyecto E-Commerce del bootcamp de Generation Mexico</p>
+            <a href="https://dantezmedina.github.io/Tu-localito/index.html" target="_blank" class="btn btn-primary mt-auto" id="btn-project-cards">Detalles</a>
           </div>
         </div>
       </div>
-      <!-- Columna 2 -->
-      <div class="col-md-6 mt-4 mt-md-0">
-        <img src="./img/dante.png" class="img-fluid rounded-circle" alt="foto de perfil">
+      <!-- Proyecto 2 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="https://via.placeholder.com/600x400" class="card-img-top" alt="Proyecto 2">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Boot de busquedas</h5>
+            <p class="card-text">Creación de boot de busquedas utilizando Python y Selenium para concurso de Microsoft
+              Rewards.</p>
+            <a href="https://github.com/DanteZMedina/Busquedas-Bing/tree/master" target="_blank"
+              class="btn btn-primary mt-auto" id="btn-project-cards">Detalles</a>
+
+          </div>
+        </div>
+      </div>
+      <!-- Proyecto 3 -->
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="https://via.placeholder.com/600x400" class="card-img-top" alt="Proyecto 3">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Mini juego de Mokepon</h5>
+            <p class="card-text">Desarrolle un mini juego de Mokepon utilizando JavaScript, HTML5 y CSS en donde puedes explorar el mapa y enfrentarte a otros Mokepon.</p>
+            <a href="https://github.com/DanteZMedina/Busquedas-Bing/tree/master" target="_blank"
+              class="btn btn-primary mt-auto" id="btn-project-cards">Detalles</a>
+          </div>
+        </div>
+      </div>
+
+  
+
+  <!-- Experiencia -->
+  <section id="experience" class="py-5 bg-light">
+    <div class="container">
+      <h2 class="section-title">Experiencia</h2>
+      <div class="card">
+        <p>
+          Soy Desarrollador Jr. especializado en Java, con formación en desarrollo fullstack utilizando tecnologías
+          modernas para frontend y backend.
+          Experiencia en programación orientada a objetos, bases de datos y QA (manual y automatizado).
+        </p>
+        <p>
+          Mi objetivo es aportar valor en el diseño y desarrollo de aplicaciones eficientes y escalables, mientras
+          continúo creciendo en entornos ágiles y colaborativos.
+        </p>
       </div>
     </div>
+  </section>
 
-    <!-- Segunda fila del grid - Sección de tarjetas -->
-    <div class="row my-4">
-      <!-- Columna 1 Tarjeta de habilidades técnicas-->
-      <div class="col my-3">
-        <div class="card" style="width: 18rem;">
-
-          <div class="card-body">
-            <h5 class="card-title">Habilidades Técnicas</h5>
-          </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">HTML5, CSS3 & Bootstrap</li>
-            <li class="list-group-item">Javascript</li>
-            <li class="list-group-item">Python</li>
-            <li class="list-group-item">Java</li>
-            <li class="list-group-item">SCRUM</li>
-            <li class="list-group-item">QA</li>
-          </ul>
-          <div class="card-body">
-            <a href="#" class="card-link">Certificados</a>
-          </div>
+  <!-- Habilidades -->
+  <section id="skills" class="py-5">
+    <div class="container">
+      <h2 class="section-title">Habilidades Técnicas</h2>
+      <div class="row g-4 text-center">
+        <div class="col-md-4">
+          <div class="card">HTML5, CSS3 & Bootstrap</div>
         </div>
-
-      </div>
-      <!-- Columna 2 Tarjeta de Experiencia-->
-      <div class="col my-3">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Experiencia</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">Mi trayectoria</h6>
-            <p class="card-text">Soy Desarrollador Jr. especializado en Java, con formación en desarrollo fullstack
-              utilizando tecnologías modernas para frontend y backend. Cuento con experiencia en programación orientada
-              a objetos, bases de datos y prácticas de calidad de software, adquiridas durante mi trayectoria como QA
-              manual y automatizado. Mi objetivo es aportar valor en el diseño y desarrollo de aplicaciones eficientes,
-              escalables y orientadas a la calidad, mientras continúo creciendo en entornos ágiles y colaborativos.</p>
-            <a href="https://github.com/DanteZMedina?tab=repositories" class="card-link">Conoce mis proyectos</a>
-
-          </div>
+        <div class="col-md-4">
+          <div class="card">JavaScript</div>
         </div>
-
-
-      </div>
-      <!-- Columna 3 Tarjeta de habilidades blandas-->
-      <div class="col my-3">
-        <div class="card" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Habilidades Blandas</h5>
-          </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Trabajo en equipo</li>
-            <li class="list-group-item">Resiliencia</li>
-            <li class="list-group-item">Comunicación asertiva</li>
-            <li class="list-group-item">Mentalidad de crecimiento</li>
-            <li class="list-group-item">Liderazgo</li>
-            <li class="list-group-item">Gestion de tiempo</li>
-          </ul>
-          <div class="card-body">
-            <a href="https://www.linkedin.com/in/dantez-medina/details/certifications/"
-              class="card-link">Certificados</a>
-          </div>
+        <div class="col-md-4">
+          <div class="card">Python</div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">Java</div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">SCRUM</div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">QA (Manual & Automatizado)</div>
         </div>
       </div>
-
-      <div id="carouselExampleFade" class="carousel slide carousel-fade">
-        <div class="carousel-inner ">
-          <div class="carousel-item active ratio ratio-16x9">
-            <img src="./img/gorillaz-demondays.jpg" class="d-block w-100" alt="Album demon days gorillaz.">
-          </div>
-          <div class="carousel-item ratio ratio-16x9">
-            <img src="./img/radiohead.webp" class="d-block w-100" alt="Radihead album cover">
-          </div>
-          <div class="carousel-item ratio ratio-16x9">
-            <img src="./img/doom.jpg" class="d-block w-100" alt="Doom game cover">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-
-
     </div>
-
-  </main>
-
-  <footer class="bd-footer py-3 mt-2 bg-body-tertiary">
-    <div class="container d-flex justify-content-center align-items-center flex-column gap-3">
-
-      <!-- Íconos de redes -->
-      <div class="d-flex gap-3">
-        <a href="#">
-          <img src="./img/Facebook_icon.svg.webp" alt="Facebook Icon" width="24" height="24">
-        </a>
-        <a href="#">
-          <img src="./img/logo-tiktok.svg" alt="TikTok Icon" width="24" height="24">
-        </a>
-        <a href="#">
-          <img src="./img/Instagram_logo_2016.svg.webp" alt="Instagram Icon" width="24" height="24">
-        </a>
-      </div>
-
-      <!-- Newsletter -->
-      <div>
-        <span class="me-2">Newsletter</span>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="email" aria-label="Search" />
-          <button class="btn btn-outline-success" id="button-buscar" type="submit">Unirme</button>
-        </form>
-      </div>
-
-    </div>
-  </footer>
+  </section>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
+      <!-- Contacto -->
+      <section id="contact" class="py-5 bg-light">
+        <div class="container text-center">
+          <h2 class="section-title">Contacto</h2>
+          <p>Si quieres colaborar conmigo o conocer más</p>
+          <a href="https://github.com/DanteZMedina" target="_blank"><img src="github-icon-1-logo.svg" alt="Github Icon" id="icons-footer"></a> 
+          <a href="https://linkedin.com/in/dantez-medina" target="_blank"> <img src="linkedin-rounded-svgrepo-com.svg" alt="LinkedIn Icon" id="icons-footer"></a>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <footer>
+        <p>&copy; 2025 Dante Medina
+        </p>
+      </footer>
+
+      <!-- Bootstrap JS -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="script.js"></script>
 </body>
 
 </html>
