--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg py-3">
+  <nav class="navbar navbar-expand-lg py-3 bg-pan-left">
     <div class="container">
-      <!-- <img src="world-of-warcraft-horde-pvp-logo-png_seeklogo-153902.png" alt="Logo" class="navbar-brand"> -->
+      <a href="#"><img src="./img/logo_personal.png" alt="Logo" class="navbar-brand" id="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,18 +50,24 @@
     </div>
   </section>
 
-    <!-- Proyectos -->
+  <!-- Proyectos -->
   <section id="projects" class="container py-5">
     <h2 class="fw-bold mb-4">Proyectos</h2>
     <div class="row g-4">
       <!-- Proyecto 1 -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="https://via.placeholder.com/600x400" class="card-img-top" alt="Proyecto 1">
+          <article>
+            <img src="https://i.ibb.co/YF6r7j7C/pexels-julieaagaard-2294471.jpg" alt="pexels-julieaagaard-2294471"
+              border="0">
+            <img src="https://i.ibb.co/sMVr37d/mango-removebg-preview.png" alt="mango-removebg-preview" border="0"
+              alt="Mango">
+          </article>
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Tu localito</h5>
             <p class="card-text">Creación de proyecto E-Commerce del bootcamp de Generation Mexico</p>
-            <a href="https://dantezmedina.github.io/Tu-localito/index.html" target="_blank" class="btn btn-primary mt-auto" id="btn-project-cards">Detalles</a>
+            <a href="https://dantezmedina.github.io/Tu-localito/index.html" target="_blank"
+              class="btn btn-primary mt-auto" id="btn-project-cards">Detalles</a>
           </div>
         </div>
       </div>
@@ -85,59 +91,60 @@
           <img src="https://via.placeholder.com/600x400" class="card-img-top" alt="Proyecto 3">
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">Mini juego de Mokepon</h5>
-            <p class="card-text">Desarrolle un mini juego de Mokepon utilizando JavaScript, HTML5 y CSS en donde puedes explorar el mapa y enfrentarte a otros Mokepon.</p>
-            <a href="https://github.com/DanteZMedina/Busquedas-Bing/tree/master" target="_blank"
+            <p class="card-text">Desarrolle un mini juego de Mokepon utilizando JavaScript, HTML5 y CSS en donde puedes
+              explorar el mapa y enfrentarte a otros Mokepon.</p>
+            <a href="https://github.com/DanteZMedina/MokePon" target="_blank"
               class="btn btn-primary mt-auto" id="btn-project-cards">Detalles</a>
           </div>
         </div>
       </div>
 
-  
 
-  <!-- Experiencia -->
-  <section id="experience" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="section-title">Experiencia</h2>
-      <div class="card">
-        <p>
-          Soy Desarrollador Jr. especializado en Java, con formación en desarrollo fullstack utilizando tecnologías
-          modernas para frontend y backend.
-          Experiencia en programación orientada a objetos, bases de datos y QA (manual y automatizado).
-        </p>
-        <p>
-          Mi objetivo es aportar valor en el diseño y desarrollo de aplicaciones eficientes y escalables, mientras
-          continúo creciendo en entornos ágiles y colaborativos.
-        </p>
-      </div>
-    </div>
-  </section>
 
-  <!-- Habilidades -->
-  <section id="skills" class="py-5">
-    <div class="container">
-      <h2 class="section-title">Habilidades Técnicas</h2>
-      <div class="row g-4 text-center">
-        <div class="col-md-4">
-          <div class="card">HTML5, CSS3 & Bootstrap</div>
+      <!-- Experiencia -->
+      <section id="experience" class="py-5 bg-light">
+        <div class="container">
+          <h2 class="section-title">Experiencia</h2>
+          <div class="card">
+            <p>
+              Soy Desarrollador Jr. especializado en Java, con formación en desarrollo fullstack utilizando tecnologías
+              modernas para frontend y backend.
+              Experiencia en programación orientada a objetos, bases de datos y QA (manual y automatizado).
+            </p>
+            <p>
+              Mi objetivo es aportar valor en el diseño y desarrollo de aplicaciones eficientes y escalables, mientras
+              continúo creciendo en entornos ágiles y colaborativos.
+            </p>
+          </div>
         </div>
-        <div class="col-md-4">
-          <div class="card">JavaScript</div>
+      </section>
+
+      <!-- Habilidades -->
+      <section id="skills" class="py-5">
+        <div class="container">
+          <h2 class="section-title">Habilidades Técnicas</h2>
+          <div class="row g-4 text-center">
+            <div class="col-md-4">
+              <div class="card">HTML5, CSS3 & Bootstrap</div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">JavaScript</div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">Python</div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">Java</div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">SCRUM</div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">QA (Manual & Automatizado)</div>
+            </div>
+          </div>
         </div>
-        <div class="col-md-4">
-          <div class="card">Python</div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">Java</div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">SCRUM</div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">QA (Manual & Automatizado)</div>
-        </div>
-      </div>
-    </div>
-  </section>
+      </section>
 
 
       <!-- Contacto -->
@@ -145,8 +152,10 @@
         <div class="container text-center">
           <h2 class="section-title">Contacto</h2>
           <p>Si quieres colaborar conmigo o conocer más</p>
-          <a href="https://github.com/DanteZMedina" target="_blank"><img src="github-icon-1-logo.svg" alt="Github Icon" id="icons-footer"></a> 
-          <a href="https://linkedin.com/in/dantez-medina" target="_blank"> <img src="linkedin-rounded-svgrepo-com.svg" alt="LinkedIn Icon" id="icons-footer"></a>
+          <a href="https://github.com/DanteZMedina" target="_blank"><img src="github-icon-1-logo.svg" alt="Github Icon"
+              id="icons-footer"></a>
+          <a href="https://linkedin.com/in/dantez-medina" target="_blank"> <img src="linkedin-rounded-svgrepo-com.svg"
+              alt="LinkedIn Icon" id="icons-footer"></a>
         </div>
       </section>
 
@@ -158,7 +167,7 @@
 
       <!-- Bootstrap JS -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="script.js"></script>
+      <script src="./js/script.js" defer></script>
 </body>
 
 </html>
