fix: modificando estructura inicial

--- a/prueba/prueba2.html
+++ b/prueba/prueba2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio | DanteZMedina</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="prueba2.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 </head>
 
@@ -14,7 +14,7 @@
     <!-- ===== NAVBAR ===== -->
     <header class="navbar">
         <div class="navbar-container">
-            <div class="logo"> <img src="../img/logo_personal.png" alt="logo_personal" href="#"></div>
+            <div class="logo"> <img src="../img/logo_personal.png" alt="logo_personal"></div>
             <nav class="nav-links">
                 <a href="#proyectos">Proyectos</a>
                 <a href="#certificaciones">Certificaciones</a>
@@ -50,7 +50,7 @@
         <div class="card-grid">
 
             <article class="card">
-                <a href="https://dantezmedina.github.io/tu-localito/" target="_blank"><img src="./img/TU-LOCALITO-2.png" alt="Proyecto tu-localito" /></a>
+                <img src="img/proyecto1.jpg" alt="Proyecto tu-localito" />
                 <div class="card-body">
                     <h4>E-Commerce tu-localito</h4>
                     <p>E-Commerce para productos locales desarrollado para el bootcamp de Generation desarrollo java
@@ -59,7 +59,7 @@
                         <span>Java</span><span>Spring Boot</span> <span>AWS EC2</span> <span>MySQL</span>
                         <span>JavaScript</span> <span>Css</span> <span>HTML</span> <span>Bootstrap</span>
                     </div>
-                    <a href="https://github.com/DanteZMedina/tu-localito/tree/dev" class="btn small repo-btn" target="_blank">
+                    <a href="#" class="btn small repo-btn" target="_blank">
                         <i class="bi bi-github"></i>
                         Ver Repositorio
                     </a>
@@ -67,7 +67,7 @@
             </article>
 
             <article class="card">
-                <a href="https://dantezmedina.github.io/Zarvela/" target="_blank"> <img src="./img/zarvelas-pre.png" alt="Zarvela consultorio de fisioterapia" /> </a>
+                <img src="img/proyecto2.jpg" alt="Zarvela" />
                 <div class="card-body">
                     <h4>Landing Consultorio de Fisioterapia Zarvela</h4>
                     <p>Página para dar a conocer los servicios de un consultorio de fisioterapia en Ciudad de México -
@@ -236,7 +236,7 @@
 
     <footer class="footer">© 2025 Dante Z. Medina. Todos los derechos reservados.</footer>
 
-    <script src="./js/script.js"></script>
+    <script src="prueba2.js"></script>
 </body>
 
 </html>
