fix:arreglando el logo del navbar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- ===== NAVBAR ===== -->
     <header class="navbar">
         <div class="navbar-container">
-            <div class="logo"> <img src="../img/logo_personal.png" alt="logo_personal" href="#"></div>
+            <div class="logo"> <img src="./img/logo_personal.png" alt="logo_personal" href="#"></div>
             <nav class="nav-links">
                 <a href="#proyectos">Proyectos</a>
                 <a href="#certificaciones">Certificaciones</a>
