fix:agregando mi nombre

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- ===== HERO ===== -->
     <section class="hero">
         <span class="status">Disponible para nuevos proyectos</span>
-        <h1>Desarrollador Java Jr</h1>
+        <h1>Dante Medina</h1>
         <p>
             Profesional con más de 3 años de experiencia en el sector bancario,
             especializado en QA funcional y en transición hacia desarrollo backend
