feat: Mejorando navbar, hero, proyectos, certificaciones, tecnologias y footer

--- a/index.html
+++ b/index.html
@@ -29,17 +29,28 @@
     <section class="hero">
         <span class="status">Disponible para nuevos proyectos</span>
         <h1>Dante Medina</h1>
+        <div class="hero-badges">
+            <span>QA</span>
+            <span>Functional Testing</span>
+            <span>Automation Testing</span>
+            <span>Java</span>
+            <span>Spring Boot</span>
+            <span>AWS</span>
+            <span>JavaScript</span>
+        </div>
         <p>
-            Profesional con más de 3 años de experiencia en el sector bancario,
-            especializado en QA funcional y en transición hacia desarrollo backend
-            y QA automatizado.
+            QA Engineer con +3 años de experiencia en sector bancario,
+            en transición a Backend Java y QA Automatizado.
         </p>
         <p>
-            Apasionado por la calidad del código y las mejores prácticas de desarrollo,
-            combinando testing y backend para crear soluciones robustas y escalables.
+            Enfocado en calidad, automatización y desarrollo de soluciones
+            robustas y escalables.
+        </p>
+        <p class="hero-highlight">
+            Testing, backend y cloud aplicados a productos reales.
         </p>
         <div class="hero-actions">
-            <!-- <a href="#proyectos" class="btn primary">Ver Proyectos</a> -->
+            <a href="#proyectos" class="btn primary">Ver Proyectos</a>
             <a href="#contacto" class="btn secondary">Contactar</a>
         </div>
     </section>
@@ -50,7 +61,8 @@
         <div class="card-grid">
 
             <article class="card">
-                <a href="https://dantezmedina.github.io/tu-localito/" target="_blank"><img src="./img/TU-LOCALITO-2.png" alt="Proyecto tu-localito" /></a>
+                <a href="https://dantezmedina.github.io/tu-localito/" target="_blank"><img src="./img/TU-LOCALITO-2.png"
+                        alt="Proyecto tu-localito" /></a>
                 <div class="card-body">
                     <h4>E-Commerce tu-localito</h4>
                     <p>E-Commerce para productos locales desarrollado para el bootcamp de Generation desarrollo java
@@ -59,7 +71,8 @@
                         <span>Java</span><span>Spring Boot</span> <span>AWS EC2</span> <span>MySQL</span>
                         <span>JavaScript</span> <span>Css</span> <span>HTML</span> <span>Bootstrap</span>
                     </div>
-                    <a href="https://github.com/DanteZMedina/tu-localito/tree/dev" class="btn small repo-btn" target="_blank">
+                    <a href="https://github.com/DanteZMedina/tu-localito/tree/dev" class="btn small repo-btn"
+                        target="_blank">
                         <i class="bi bi-github"></i>
                         Ver Repositorio
                     </a>
@@ -67,7 +80,8 @@
             </article>
 
             <article class="card">
-                <a href="https://dantezmedina.github.io/Zarvela/" target="_blank"> <img src="./img/zarvelas-pre.png" alt="Zarvela consultorio de fisioterapia" /> </a>
+                <a href="https://dantezmedina.github.io/Zarvela/" target="_blank"> <img src="./img/zarvelas-pre.png"
+                        alt="Zarvela consultorio de fisioterapia" /> </a>
                 <div class="card-body">
                     <h4>Landing Consultorio de Fisioterapia Zarvela</h4>
                     <p>Página para dar a conocer los servicios de un consultorio de fisioterapia en Ciudad de México -
@@ -84,7 +98,7 @@
             </article>
 
             <article class="card">
-                <img src="img/proyecto3.jpg" alt="Boot de automatización de busquedas bing" />
+                <img src="./img/bingbot.png" alt="Boot de automatización de busquedas bing" />
                 <div class="card-body">
                     <h4>Boot de automatización de busquedas bing</h4>
                     <p>Desarrollo de un bot para automatizar búsquedas en Bing para el concurso de Microsoft Rewards
@@ -93,7 +107,8 @@
                         <span>Python</span><span>Selenium</span><span>ChromeDriver</span> <span>EdgeDriver</span>
                         <span>Git/Github</span>
                     </div>
-                    <a href="#" class="btn small repo-btn" target="_blank">
+                    <a href="https://github.com/DanteZMedina/Bot-busquedas-bing#" class="btn small repo-btn"
+                        target="_blank">
                         <i class="bi bi-github"></i>
                         Ver Repositorio
                     </a>
@@ -106,49 +121,135 @@
     <!-- ===== CERTIFICACIONES ===== -->
     <section id="certificaciones" class="section dark">
         <h3>Certificaciones</h3>
+
         <div class="card-grid two">
 
             <a href="https://drive.google.com/file/d/1EpwUQeLfnmpTbiX3cHX5n0mbCywDIq3s/view?usp=sharing"
-                class="cert-card" target="_blank">
-                <h4>DESARROLLADOR/A JAVA FULL STACK</h4>
-                <span>Generation Mexico</span>
+                class="cert-card" target="_blank" rel="noopener noreferrer">
+
+                <div class="cert-left">
+                    <div class="cert-icon">
+                        <i class="bi bi-award"></i>
+                    </div>
+                    <div class="cert-text">
+                        <h4>Desarrollador Java Full Stack</h4>
+                        <span>Generation Mexico</span>
+                    </div>
+                </div>
+
+                <i class="bi bi-box-arrow-up-right cert-link-icon"></i>
             </a>
 
             <a href="https://drive.google.com/file/d/1M9UJf55mhI0AAlhJtaDa-nfmBxMXf-fd/view?usp=sharing"
-                class="cert-card" target="_blank">
-                <h4>Introduction to Automated Testing in JavaScript</h4>
-                <span>EPAM</span>
+                class="cert-card" target="_blank" rel="noopener noreferrer">
+
+                <div class="cert-left">
+                    <div class="cert-icon">
+                        <i class="bi bi-award"></i>
+                    </div>
+                    <div class="cert-text">
+                        <h4>Introduction to Automated Testing in JavaScript</h4>
+                        <span>EPAM</span>
+                    </div>
+                </div>
+
+                <i class="bi bi-box-arrow-up-right cert-link-icon"></i>
             </a>
 
             <a href="https://platzi.com/p/dantemedina/curso/11997-ingenieria/diploma/detalle/" class="cert-card"
-                target="_blank">
-                <h4>Fundamentos de Ingeniería de Software</h4>
-                <span>Platzi</span>
+                target="_blank" rel="noopener noreferrer">
+
+                <div class="cert-left">
+                    <div class="cert-icon">
+                        <i class="bi bi-award"></i>
+                    </div>
+                    <div class="cert-text">
+                        <h4>Fundamentos de Ingeniería de Software</h4>
+                        <span>Platzi</span>
+                    </div>
+                </div>
+
+                <i class="bi bi-box-arrow-up-right cert-link-icon"></i>
             </a>
 
-            <a href="https://platzi.com/p/dantemedina/" class="cert-card" target="_blank">
-                <h4>Certificaciones de platzi</h4>
-                <span>Platzi</span>
+            <a href="https://platzi.com/p/dantemedina/" class="cert-card" target="_blank" rel="noopener noreferrer">
+
+                <div class="cert-left">
+                    <div class="cert-icon">
+                        <i class="bi bi-award"></i>
+                    </div>
+                    <div class="cert-text">
+                        <h4>Certificaciones Platzi</h4>
+                        <span>Platzi</span>
+                    </div>
+                </div>
+
+                <i class="bi bi-box-arrow-up-right cert-link-icon"></i>
             </a>
 
-            <a href="https://coursera.org/share/096019584eefa89d1bc9aa6bc3cafd7b" class="cert-card" target="_blank">
-                <h4>Google Prompting
-                    Essentials</h4>
-                <span>Coursera</span>
-            </a>
-            <a href="https://coursera.org/share/644e47e66035396c5e3554e6c8c5ec0f" class="cert-card" target="_blank">
-                <h4>Learning How to Learn: Powerful mental tools to help you master tough subjects</h4>
-                <span>Coursera</span>
-            </a>
-            <a href="https://coursera.org/share/d383367c3aefd119e6212ace8d454406" class="cert-card" target="_blank">
-                <h4>Adaptability and Resiliency</h4>
-                <span>Coursera</span>
+            <a href="https://coursera.org/share/096019584eefa89d1bc9aa6bc3cafd7b" class="cert-card" target="_blank"
+                rel="noopener noreferrer">
+
+                <div class="cert-left">
+                    <div class="cert-icon">
+                        <i class="bi bi-award"></i>
+                    </div>
+                    <div class="cert-text">
+                        <h4>Google Prompting Essentials</h4>
+                        <span>Coursera</span>
+                    </div>
+                </div>
+
+                <i class="bi bi-box-arrow-up-right cert-link-icon"></i>
             </a>
 
-            <a href="#" class="cert-card" target="_blank">
-                <h4>Amazon Junior Software Developer</h4>
-                <span>Coursera - In progress</span>
+            <a href="https://coursera.org/share/644e47e66035396c5e3554e6c8c5ec0f" class="cert-card" target="_blank"
+                rel="noopener noreferrer">
+
+                <div class="cert-left">
+                    <div class="cert-icon">
+                        <i class="bi bi-award"></i>
+                    </div>
+                    <div class="cert-text">
+                        <h4>Learning How to Learn</h4>
+                        <span>Coursera</span>
+                    </div>
+                </div>
+
+                <i class="bi bi-box-arrow-up-right cert-link-icon"></i>
             </a>
+
+            <a href="https://coursera.org/share/d383367c3aefd119e6212ace8d454406" class="cert-card" target="_blank"
+                rel="noopener noreferrer">
+
+                <div class="cert-left">
+                    <div class="cert-icon">
+                        <i class="bi bi-award"></i>
+                    </div>
+                    <div class="cert-text">
+                        <h4>Adaptability and Resiliency</h4>
+                        <span>Coursera</span>
+                    </div>
+                </div>
+
+                <i class="bi bi-box-arrow-up-right cert-link-icon"></i>
+            </a>
+
+            <a href="#" class="cert-card" target="_blank" rel="noopener noreferrer">
+
+                <div class="cert-left">
+                    <div class="cert-icon">
+                        <i class="bi bi-hourglass-split"></i>
+                    </div>
+                    <div class="cert-text">
+                        <h4>Amazon Junior Software Developer</h4>
+                        <span>Coursera · En progreso</span>
+                    </div>
+                </div>
+
+                <i class="bi bi-box-arrow-up-right cert-link-icon"></i>
+            </a>
+
         </div>
     </section>
 
@@ -205,6 +306,15 @@
                     <li>Bootstrap</li>
                 </ul>
             </div>
+            <div>
+                <h5>Inteligencia artificial</h5>
+                <ul>
+                    <li>Generative AI (Prompt Engineering)</li>
+                    <li>Google Gemini</li>
+                    <li>OpenAI ChatGPT</li>
+                    <li>Microsoft Copilot</li>
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -228,6 +338,15 @@
                     <i class="bi bi-linkedin"></i>
                     <a href="https://www.linkedin.com/in/dantez-medina" target="_blank">
                         linkedin.com/in/dantez-medina
+                    </a>
+                </p>
+            </div>
+            <div>
+                <p class="contact-item">
+                    <i class="bi bi-file-earmark-person"></i>
+                    <a href="https://drive.google.com/file/d/15UUjCVKMIOAx3-Ks0s7-bsiUdcDWbGHz/view?usp=sharing"
+                        target="_blank">
+                        Encuentra mi CV aquí
                     </a>
                 </p>
             </div>
