fix: Corrigiendo hero-badges

--- a/index.html
+++ b/index.html
@@ -28,13 +28,10 @@
     <!-- ===== HERO ===== -->
     <section class="hero">
         <span class="status">Disponible para nuevos proyectos</span>
-        <h1>Dante Medina</h1>
+        <h1>DanteZMedina</h1>
         <div class="hero-badges">
             <span>QA</span>
-            <span>Functional Testing</span>
-            <span>Automation Testing</span>
             <span>Java</span>
-            <span>Spring Boot</span>
             <span>AWS</span>
             <span>JavaScript</span>
         </div>
